--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@node-saml/node-saml",
-  "version": "5.0.0",
+  "name": "@montblanc0/node-saml",
+  "version": "5.0.1",
   "description": "SAML 2.0 implementation for Node.js",
+  "forkedFrom": "https://github.com/node-saml/node-saml.git",
   "keywords": [
     "saml",
     "adfs",
@@ -10,15 +11,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/node-saml/node-saml.git"
+    "url": "https://github.com/montblanc0/node-saml.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Henri Bergius",
-    "email": "henri.bergius@iki.fi",
-    "url": "http://bergie.iki.fi"
+    "name": "Montblanc0",
+    "email": "montblanczero@gmail.com",
+    "url": "https://github.com/montblanc0"
   },
   "contributors": [
+    "Henri Bergius",
     "Michael Bosworth",
     "Herbert Vojčík",
     "Peter Loer",
